--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,20 +31,31 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">126.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi_attn">2</td><td class="numi">263.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="4">tests.ShoppingCartTests</td><td><a href="#m1"><b>createOrder_forMultipleItems_createdSuccessfully</b>  </a></td><td class="numi">1</td><td>1528912871524</td><td class="numi">38067</td></tr><tr class="passedodd"><td><a href="#m2"><b>createOrder_forOneMagicMouse_createdSuccessfully</b>  </a></td><td class="numi">1</td><td>1528912909593</td><td class="numi">44789</td></tr><tr class="passedodd"><td><a href="#m3"><b>removeAnItem_ffromCheckoutPage_removedSuccessfully</b>  </a></td><td class="numi">1</td><td>1528912954385</td><td class="numi">23985</td></tr><tr class="passedodd"><td><a href="#m4"><b>updateQuantity_fromCheckoutPage_updatedSuccessfully</b>  </a></td><td class="numi">1</td><td>1528912978373</td><td class="numi">18036</td></tr>
+<tr><th colspan="4">Test &#8212; failed</th></tr>
+<tr class="failedodd"><td rowspan="2">tests.ShoppingCartTests</td><td><a href="#m1"><b>createOrder_forOneMagicMouse_createdSuccessfully</b>  </a></td><td class="numi">1</td><td>1528936946043</td><td class="numi">22487</td></tr><tr class="failedodd"><td><a href="#m2"><b>removeAnItem_ffromCheckoutPage_removedSuccessfully</b>  </a></td><td class="numi">1</td><td>1528936968537</td><td class="numi">129325</td></tr>
+<tr><th colspan="4">Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="2">tests.ShoppingCartTests</td><td><a href="#m3"><b>createOrder_forMultipleItems_createdSuccessfully</b>  </a></td><td class="numi">1</td><td>1528936865624</td><td class="numi">80416</td></tr><tr class="passedodd"><td><a href="#m4"><b>updateQuantity_fromCheckoutPage_updatedSuccessfully</b>  </a></td><td class="numi">1</td><td>1528937097865</td><td class="numi">29573</td></tr>
 </table>
-<h1>Default test</h1>
+<h1>Test</h1>
 <h2 id="m1">tests.ShoppingCartTests:removeAnItem_ffromCheckoutPage_removedSuccessfully</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
 <tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td>
-<td>common.TestProperties@433defed</td>
+<td>common.TestProperties@6d60fe40</td>
 </tr>
+<tr><td style="padding-left:3em" colspan="2">
+<p>Expected only 1 item to be displayed in the cart but 2 items were displayed expected [2] but found [1]</p>
+org.testng.Assert.fail(Assert.java:94)
+<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
+<br/>at org.testng.Assert.assertEquals(Assert.java:123)
+<br/>at org.testng.Assert.assertEquals(Assert.java:370)
+<br/>at tests.ShoppingCartTests.removeAnItem_ffromCheckoutPage_removedSuccessfully(ShoppingCartTests.java:109)
+<br/>25 lines not shown
+</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m2">tests.ShoppingCartTests:createOrder_forOneMagicMouse_createdSuccessfully</h2>
@@ -53,13 +64,22 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td>
 <td>common.TestProperties@4082ba93</td>
 </tr>
+<tr><td style="padding-left:3em" colspan="2">
+<p>Expected the number of items in the cart to be 1 but found 0 expected [1] but found [0]</p>
+org.testng.Assert.fail(Assert.java:94)
+<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
+<br/>at org.testng.Assert.assertEquals(Assert.java:123)
+<br/>at org.testng.Assert.assertEquals(Assert.java:370)
+<br/>at tests.ShoppingCartTests.createOrder_forOneMagicMouse_createdSuccessfully(ShoppingCartTests.java:36)
+<br/>25 lines not shown
+</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m3">tests.ShoppingCartTests:updateQuantity_fromCheckoutPage_updatedSuccessfully</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
 <tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td>
-<td>common.TestProperties@3f4faf53</td>
+<td>common.TestProperties@19932c16</td>
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
