Enhancing the wait

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>tests.ShoppingCartTests.updateQuantity_fromCheckoutPage_updatedSuccessfully</td></tr>
+<tr><td>tests.ShoppingCartTests.removeAnItem_ffromCheckoutPage_removedSuccessfully</td></tr>
+<tr><td>tests.ShoppingCartTests.createOrder_forOneMagicMouse_createdSuccessfully</td></tr>
 </table>
