--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,94 +1,2 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>TestNG:  Unit Test</title>
-<style type="text/css">
-table caption,table.info_table,table.result,table.passed,table.failed {margin-bottom:10px;border:1px solid #000099;border-collapse:collapse;empty-cells:show;}
-table.info_table td,table.info_table th,table.result td,table.result th,table.passed td,table.passed th,table.failed td,table.failed th {
-border:1px solid #000099;padding:.25em .5em .25em .5em
-}
-table.result th {vertical-align:bottom}
-tr.param th {padding-left:1em;padding-right:1em}
-tr.param td {padding-left:.5em;padding-right:2em}
-td.numi,th.numi,td.numi_attn {
-text-align:right
-}
-tr.total td {font-weight:bold}
-table caption {
-text-align:center;font-weight:bold;
-}
-table.passed tr.stripe td,table tr.passedodd td {background-color: #00AA00;}
-table.passed td,table tr.passedeven td {background-color: #33FF33;}
-table.passed tr.stripe td,table tr.skippedodd td {background-color: #cccccc;}
-table.passed td,table tr.skippedodd td {background-color: #dddddd;}
-table.failed tr.stripe td,table tr.failedodd td,table.result td.numi_attn {background-color: #FF3333;}
-table.failed td,table tr.failedeven td,table.result tr.stripe td.numi_attn {background-color: #DD0000;}
-tr.stripe td,tr.stripe th {background-color: #E6EBF9;}
-p.totop {font-size:85%;text-align:center;border-bottom:2px black solid}
-div.shootout {padding:2em;border:3px #4854A8 solid}
-</style>
-</head>
-<body>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi_attn">2</td><td class="numi">263.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-</table>
-<table cellspacing="0" cellpadding="0" class="passed" id="summary">
-<tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="2">tests.ShoppingCartTests</td><td><a href="#m1"><b>createOrder_forOneMagicMouse_createdSuccessfully</b>  </a></td><td class="numi">1</td><td>1528936946043</td><td class="numi">22487</td></tr><tr class="failedodd"><td><a href="#m2"><b>removeAnItem_ffromCheckoutPage_removedSuccessfully</b>  </a></td><td class="numi">1</td><td>1528936968537</td><td class="numi">129325</td></tr>
-<tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="2">tests.ShoppingCartTests</td><td><a href="#m3"><b>createOrder_forMultipleItems_createdSuccessfully</b>  </a></td><td class="numi">1</td><td>1528936865624</td><td class="numi">80416</td></tr><tr class="passedodd"><td><a href="#m4"><b>updateQuantity_fromCheckoutPage_updatedSuccessfully</b>  </a></td><td class="numi">1</td><td>1528937097865</td><td class="numi">29573</td></tr>
-</table>
-<h1>Test</h1>
-<h2 id="m1">tests.ShoppingCartTests:removeAnItem_ffromCheckoutPage_removedSuccessfully</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td>
-<td>common.TestProperties@6d60fe40</td>
-</tr>
-<tr><td style="padding-left:3em" colspan="2">
-<p>Expected only 1 item to be displayed in the cart but 2 items were displayed expected [2] but found [1]</p>
-org.testng.Assert.fail(Assert.java:94)
-<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
-<br/>at org.testng.Assert.assertEquals(Assert.java:123)
-<br/>at org.testng.Assert.assertEquals(Assert.java:370)
-<br/>at tests.ShoppingCartTests.removeAnItem_ffromCheckoutPage_removedSuccessfully(ShoppingCartTests.java:109)
-<br/>25 lines not shown
-</td></tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">tests.ShoppingCartTests:createOrder_forOneMagicMouse_createdSuccessfully</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td>
-<td>common.TestProperties@4082ba93</td>
-</tr>
-<tr><td style="padding-left:3em" colspan="2">
-<p>Expected the number of items in the cart to be 1 but found 0 expected [1] but found [0]</p>
-org.testng.Assert.fail(Assert.java:94)
-<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
-<br/>at org.testng.Assert.assertEquals(Assert.java:123)
-<br/>at org.testng.Assert.assertEquals(Assert.java:370)
-<br/>at tests.ShoppingCartTests.createOrder_forOneMagicMouse_createdSuccessfully(ShoppingCartTests.java:36)
-<br/>25 lines not shown
-</td></tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">tests.ShoppingCartTests:updateQuantity_fromCheckoutPage_updatedSuccessfully</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td>
-<td>common.TestProperties@19932c16</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">tests.ShoppingCartTests:createOrder_forMultipleItems_createdSuccessfully</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td>
-<td>common.TestProperties@4659191b</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-</body></html>
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">36,197</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.ShoppingCartTests</td><td><a href="#m0">createOrder_forMultipleItems_createdSuccessfully</a></td><td rowspan="1">1528945869211</td><td rowspan="1">35500</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">tests.ShoppingCartTests#createOrder_forMultipleItems_createdSuccessfully</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>ChromeDriver: chrome on XP (null)</td><td>common.TestProperties@1a6d8329</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
