--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2e7d9">  <td>18/06/13 14:01:07</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:tests.ShoppingCartTests@754ba872]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 14:01:11</td>   <td>3777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.createOrder_forMultipleItems_createdSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">createOrder_forMultipleItems_createdSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 14:01:49</td>   <td>41846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.createOrder_forOneMagicMouse_createdSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">createOrder_forOneMagicMouse_createdSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 14:02:34</td>   <td>86638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.removeAnItem_ffromCheckoutPage_removedSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">removeAnItem_ffromCheckoutPage_removedSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 14:02:58</td>   <td>110626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.updateQuantity_fromCheckoutPage_updatedSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">updateQuantity_fromCheckoutPage_updatedSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>18/06/13 14:03:16</td>   <td>128664</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:tests.ShoppingCartTests@754ba872]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="f76cb4">  <td>18/06/13 23:11:05</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:tests.ShoppingCartTests@5622fdf]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1938056729</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>18/06/13 23:11:09</td>   <td>3485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.createOrder_forMultipleItems_createdSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@5622fdf]">createOrder_forMultipleItems_createdSuccessfully</td> 
+  <td>main@1938056729</td>   <td></td> </tr>
+<tr bgcolor="f76cb4">  <td>18/06/13 23:11:44</td>   <td>38987</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:tests.ShoppingCartTests@5622fdf]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1938056729</td>   <td></td> </tr>
 </table>
