--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2e7d9">  <td>18/06/13 20:41:01</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:tests.ShoppingCartTests@754ba872]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 20:41:05</td>   <td>3769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.createOrder_forMultipleItems_createdSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">createOrder_forMultipleItems_createdSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 20:42:26</td>   <td>84188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.createOrder_forOneMagicMouse_createdSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">createOrder_forOneMagicMouse_createdSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 20:42:48</td>   <td>106682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.removeAnItem_ffromCheckoutPage_removedSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">removeAnItem_ffromCheckoutPage_removedSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/06/13 20:44:57</td>   <td>236010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.updateQuantity_fromCheckoutPage_updatedSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@754ba872]">updateQuantity_fromCheckoutPage_updatedSuccessfully</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>18/06/13 20:45:27</td>   <td>265590</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:tests.ShoppingCartTests@754ba872]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>18/06/13 22:19:06</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:tests.ShoppingCartTests@6a41eaa2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/13 22:19:10</td>   <td>3451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.createOrder_forMultipleItems_createdSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@6a41eaa2]">createOrder_forMultipleItems_createdSuccessfully</td> 
+  <td>main@1459794865</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/13 22:20:49</td>   <td>102925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.createOrder_forOneMagicMouse_createdSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@6a41eaa2]">createOrder_forOneMagicMouse_createdSuccessfully</td> 
+  <td>main@1459794865</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/13 22:20:50</td>   <td>103120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.removeAnItem_ffromCheckoutPage_removedSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@6a41eaa2]">removeAnItem_ffromCheckoutPage_removedSuccessfully</td> 
+  <td>main@1459794865</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/13 22:21:09</td>   <td>122130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTests.updateQuantity_fromCheckoutPage_updatedSuccessfully(org.openqa.selenium.WebDriver, common.TestProperties)[pri:0, instance:tests.ShoppingCartTests@6a41eaa2]">updateQuantity_fromCheckoutPage_updatedSuccessfully</td> 
+  <td>main@1459794865</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>18/06/13 22:21:24</td>   <td>137250</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:tests.ShoppingCartTests@6a41eaa2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
 </table>
